--- a/app/views/includes/elements_stylesheets.html
+++ b/app/views/includes/elements_stylesheets.html
@@ -1,4 +1,3 @@
-<!--[if gt IE 8]><!--><link href="/public/stylesheets/govuk-elements-styles.css"  rel="stylesheet" type="text/css"><!--<![endif]-->
-<!--[if IE 6]><link href="/public/stylesheets/govuk-elements-styles-ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
-<!--[if IE 7]><link href="/public/stylesheets/govuk-elements-styles-ie7.css" rel="stylesheet" type="text/css" /><![endif]-->
-<!--[if IE 8]><link href="/public/stylesheets/govuk-elements-styles-ie8.css" rel="stylesheet" type="text/css" /><![endif]-->
+<!--[if lt IE 8 ]><link rel="stylesheet" href="/public/stylesheets/application-ie7.min.css" /><![endif]-->
+<!--[if IE 8 ]><link rel="stylesheet" href="/public/stylesheets/application-ie.min.css" /><![endif]-->
+<!--[if gt IE 8]><!--><link rel="stylesheet" href="/public/stylesheets/application.min.css" /><!--<![endif]-->
