--- a/assets/sass/elements-documentation.scss
+++ b/assets/sass/elements-documentation.scss
@@ -90,8 +90,8 @@ main > .heading-xlarge {
 // Example boxes
 // ==========================================================================
 
-// .example {
-//   @extend %contain-floats;
+ .example {
+   @extend %contain-floats;
 //   position: relative;
 //   overflow: hidden;
 //   border: 1px solid $grey-2;
@@ -167,7 +167,7 @@ main > .heading-xlarge {
 //     }
 //   }
 
-// }
+ }
 
 
 // 1. Layout
